apps/task-manager/overlays/dev/delete-nginx-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager
  namespace: task-manager-dev
